# helixfold3_wemol

./: .gitignore  CHANGELOG.md  README.md  README_DEV.md  cli_config.toml  old_run.py  paddlehelix-1.2-py3-none-any.whl  pyproject.toml  run.sh
src/py_script_template/: __init__.py  __main__.py  cli.py  utils.py
test_files/: 测试pdb.xlsx
test_files/potein-ligand-ion/: lig.smi  pro_lig_ion.fasta
test_files/protein/: pro_1000AA.fasta  pro_300AA.fasta  pro_600AA.fasta
test_files/protein-DNA/: pro_DNA.fasta
test_files/protein-DNA-modification/: dna_mod.fasta  modification.txt  pro_dna_mod.fasta
test_files/protein-RNA/: pro_RNA.fasta
test_files/protein-RNA-ligand/: lig.sdf  lig.smi  pro_RNA_lig.fasta
test_files/protein-ligand/: lig.sdf  lig.smi  ligand.txt  pro_lig.fasta
test_files/protein-modification/: modification.txt  pro_mod.fasta
test_files/protein-multi-ion/: pro_ion.fasta
tests/: test_sciprt.py  test_sciprt_with_dev.py  test_sciprt_with_pro.py
