[project]
name = "py-script-template"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "VentCat", email = "2546650292@qq.com" }]
dependencies = [
    "toml>=0.10.2",
    "biopython>=1.84",
    "pandas==2.2.3",
    "paddlehelix @ file:///D:/helixfold3_wemol/paddlehelix-1.2-py3-none-any.whl",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
main = "py_script_template:main"

[tool.rye.scripts]
# 基础蛋白质预测测试
protein_small = '''
rye run main --mode single --job_name pro_300AA --protein ">pro_300AA.A
GPVIRQGPVNQTVAVDGTFVLSCVATGSPVPTILWRKDGVLVSTQDSRIKQLENGVLQIRYAKLGDTGRYTCIASTPSGEATWSAYIEVQ
>pro_300AA.B
EVQLVESGGGVVQPGGSLKLSCAASGFTFSTYDMSWVRQTPDKRLELVATINSNGGSTYYPDSV
KGRFTSSRDNAKNILYLQMSSLKSEDTAMYYCAREALLRPPYYALDYWGQGTSVTVS
>pro_300AA.C
LDIQMTQSPASLSASVGETVTITCGASENIYGALTWYQRKQGKSPQLLIYGAINLADDKSSRFSGSGSGRQYSLKISSLHPDDVATYYCQNVLSTPFTFGSGTKLEIK"
'''

protein_medium = '''
rye run main --job_name pro_600AA --protein ">pro_600AA.A
VSGITALTVVVGTVIGAGIFFKPTAVYGAAGAPGLGLLAWFVAGIITIAGGLTVAEIGTIYPQTGGMMIYLEKVYGRWLGFLVGWAQMVIYYPANIAALAIIFATQFVNLFALSDSTIVPTAILTSIFLMGVNFLGTKYSGWIQTLATILKLIPLVVIIVAGLLYPGGGVIRLVPFSVETHPVLTSFGSALIATLFAYDGWINVGTLAGEMKNPGKMLPKVIIGGLSIVMAVYLLTNIAYLFVLDSSQLAGTDTPAALVASHLFEGIGSKLVTIGILISVFGGINGYIISGLRVPYALATQKMLPFSDWFARINPKTNLPINGGLVMLGIAIVMILTGQFNQLTDLIVFVIWFFITLTFIAVIILRKTQPDIERPYRVPFYPVIPLIAIIGGLYIIFNTLIVQPKNAFIGILLTLIGIPIYFY
CKKKYGS
>pro_600AA.B
QVQLVESGGGVVQAGGSLRLSCAASGRTFSSRAMGWFRQAPGEGREFVATISWSGSYTEYADSVKGRVTISRDNAKNTVYLQMNSLKPGDTAVYHCAAKNGGAASNYPNDYVYWGQGTQVTVSSHHHHHHE"
'''

# 多任务测试用例
# batch_test = '''
# rye run main --mode batch --job_name batch_test --protein ">task1
# GPVIRQGPVNQTVAVDGTFVLSCVATGSPVPTILWRKDGVLVSTQDSRIKQLENGVLQIRYAKLGDTGRYTCIASTPSGEATWSAYIEVQ
# >task2
# EVQLVESGGGVVQPGGSLKLSCAASGFTFSTYDMSWVRQTPDKRLELVATINSNGGSTYYPDSV"
# '''

# 复合物预测测试
complex_protein_dna = """rye run main --protein ">pro_DNA.A\nASSINPWILTGFADAEGSFGLYIINRNRGRIRYTTRLKFTITLHNKDKSILENIQSTWKVGI... --dna ">pro_DNA.B\ngggaatggcagtattcatccacaatg\n>pro_DNA.C\nccattgtggatgaatactgccattcc"""

complex_protein_rna = """rye run main --protein ">pro_RNA.A\ngggucucgcggaaccggugaguacaccggaauccaggaaacuggauuugggcgugcccccgcgagacc\n>pro_RNA.B\nEVQLVESGGGLVQPGGSLRLSCAASGFYISSYSIHWVRQAPGKGLEWVASIYPSYGYTSYADSVKGRFTISADTSKNTAYLQMNSLRAEDTAVYYCARRYRSYYSRYGFDYWGQGTLVTVSSASTKGPSVFPLAPSSKSTSGGTAALGCLVKDYFPEPVTVSWNSGALTSGVHTFPAVLQSSGLYSLSSVVTVPSSSLGTQTYICNVNHKPSNTKVDKKVEPKSC\n>pro_RNA.C\nSDIQMTQSPSSLSASVGDRVTITCRASQSVSSAVAWYQQKPGKAPKLLIYSASSLYSGVPSRFSGSRSGTDFTLTISSLQPEDFATYYCQQSSYYPSTFGQGTKVEIKRTVAAPSVFIFPPSDEQLKSGTASVVCLLNNFYPREAKVQWKVDNALQSGNSQESVTEQDSKDSTYSLSSTLTLSKADYEKHKVYACEVTHQGLSSPVTKSFNRGEC"""

complex_protein_ligand = '''
rye run main --protein ">pro_lig.A
ADLKAFSKHIYNAYLKNFNMTKKKARSILTGKASHTAPFVIHDIETLWQAEKGLVWKQLVNGLPPYKEISVHVFYRCQCTTVETVRELTEFAKSIPSFSSLFLNDQVTLLKYGVHEAIFAMLASIVNKDGLLVANGSGFVTREFLRSLRKPFSDIIEPKFEFAVKFNALELDDSDLALFIAAIIILCGDRPGLMNVPRVEAIQDTILRALEFHLQANHPDAQYLFPKLLQKMADLRQLVTEHAQMMQRIKKTETETSLHPLLQEIYKDMY" --ligand "CC(=O)OC1C[NH+]2CCC1CC2
CCD,ATP,HY3"
'''

complex_protein_ligand_ion = '''
rye run main --protein ">pro_lig_ion.A
EIVDSFDDMNLSESLLRGIYAYGFEKPSAIQQRAILPCIKGYDVIAQAQSGTGKTATFAISILQQIELDLKATQALVLAPTRELAQQIQKVVMALGDYMGASCHACIGGTNVRAEVQKLQMEAPHIIVGTPGRVFDMLNRRYLSPKYIKMFVLDEADEMLSRGFKDQIYDIFQKLNSNTQVVLLSATMPSDVLEVTKKFMRDPIRILVKKEELTLEGIRQFYINVEREEWKLDTLCDLYETLTITQAVIFINTRRKVDWLTEKMHARDFTVSAMHGDMDQKERDVIMREFRSGSSRVLITTDLLARGIDVQQVSLVINYDLPTNRENYIHRIGRGGRFGRKGVAINMVTEEDKRTLRDIETFYNTSIEEMPLNVADLI" --ligand "CC(=O)OC1C[NH+]2CCC1CC2
CCD,MG"
'''

complex_protein_rna_ligand = '''
rye run main --protein ">pro_RNA_lig.A
GEIQWVKPNKETGRLNINGPTRTKLEPSVFHDIFEGNKEPAVLHSKDPRLEVDFEQALFSKYVGNTLHEPDEYIKEAALHYANQLKQLEINTSQMSMEEACYGTENLEAIDLHTSAGYPYSALGIKKRDILDPTTRDVSKMKFYMDKYGLDLPYSTYVKDELRSIDKIKKGKSRLIEASSLN
DSVYLRMAFGHLYEAFHANPGTITGSAVGCNPDTFWSKLPILLPGSLFAFDYSGYDAS
LSPVWFRALELVLREIGYSEEAVSLIEGINHTHHVYRNKTYCVLGGMPSGCSGTSIFNSM
INNIIIRALLIKTFKGIDLDELNMVAYGDDVLASYPFPIDCLELAKTGKEYGLTMTPADK
SPCFNEVNWGNATFLKRGFLPDEQFPFLIHPTMPMREIHESIRWTKDARNTQDHVRSLCL
LAWHNGKQEYEKFVSTIRSVPVGRALAIPNYENLRRNWLELF
>pro_RNA_lig.B
gggagaugaaagucuccaggucucucggaaa" --ligand "CC(=O)OC1C[NH+]2CCC1CC2"
'''

# 开发测试用例
dev = "rye run protein_medium"

# Test Script
test_dev = "rye test -a -- tests/test_sciprt_with_dev.py"
test_pro = "rye test -a -- tests/test_sciprt_with_pro.py"

[tool.rye]
managed = true
dev-dependencies = ["pytest>=8.3.2"]
sources = [
    { name = "tsinghua", url = "https://pypi.tuna.tsinghua.edu.cn/simple" },
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/py_script_template"]
