[project]
name = "py-script-template"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "VentCat", email = "2546650292@qq.com" }]
dependencies = [
    "toml>=0.10.2",
    "biopython>=1.84",
    "pandas==2.2.3",
    "paddlehelix @ file:///D:/helixfold3_wemol/paddlehelix-1.2-py3-none-any.whl",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
main = "py_script_template:main"

[tool.rye.scripts]
# 基础蛋白质预测测试
protein_small = "rye run main --job_name pro_300AA --protein ./test_files/protein/pro_300AA.fasta"
protein_medium = "rye run main --job_name pro_600AA --protein ./test_files/protein/pro_600AA.fasta"

# 复合物预测测试
complex_protein_dna = "rye run main --job_name pro_DNA --protein ./test_files/protein-DNA/pro_DNA.fasta --dna ./test_files/protein-DNA/pro_DNA.fasta"

complex_protein_rna = "rye run main --job_name pro_RNA --protein ./test_files/protein-RNA/pro_RNA.fasta --rna ./test_files/protein-RNA/pro_RNA.fasta"

complex_protein_ligand = """rye run main --job_name pro_lig --protein ./test_files/protein-ligand/pro_lig.fasta --ligand "$(cat ./test_files/protein-ligand/lig.smi)" """

complex_protein_ligand_ion = """
ligand_content=$(cat ./test_files/potein-ligand-ion/lig.smi)
rye run main --job_name pro_lig_ion \
    --protein ./test_files/potein-ligand-ion/pro_lig_ion.fasta \
    --ligand "$ligand_content" \
    --ion "ZN"
"""

complex_protein_rna_ligand = """rye run main --job_name pro_RNA_lig --protein ./test_files/protein-RNA-ligand/pro_RNA_lig.fasta --rna ./test_files/protein-RNA-ligand/pro_RNA_lig.fasta --ligand "$(cat ./test_files/protein-RNA-ligand/lig.smi)" """

# 测试命令组
test_all = """rye run protein_small && rye run protein_medium && rye run complex_protein_dna && rye run complex_protein_rna && rye run complex_protein_ligand && rye run complex_protein_ligand_ion && rye run complex_protein_rna_ligand"""

# 开发测试用例
dev = "rye run protein_medium"

# Test Script
test_dev = "rye test -a -- tests/test_sciprt_with_dev.py"
test_pro = "rye test -a -- tests/test_sciprt_with_pro.py"


[tool.rye]
managed = true
dev-dependencies = ["pytest>=8.3.2"]
sources = [
    { name = "tsinghua", url = "https://pypi.tuna.tsinghua.edu.cn/simple" },
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/py_script_template"]
